fixes search button mobile

--- a/projet-2/style.css
+++ b/projet-2/style.css
@@ -548,9 +548,6 @@ footer{
     }
 
     .search i {
-        position: relative;
-        top: 16px;
-        right: 35px;
         color: white;
         display: block;
         cursor: pointer;
